Wed Feb 08 09:57:33 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Call INT2NUM only once for GeneralString.
	  Thanks to Mantas Mikulenas for noticing and providing a patch!
	  [ruby-core:42358] [Bug #5972]

Wed Feb 08 09:19:00 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_cipher.c: Add warning about key as IV.

Tue Feb  7 20:08:12 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* error.c (exc_inspect): Fix typo. patch from Trent Ogren
	  via https://github.com/ruby/ruby/pull/90

Tue Feb  7 19:37:35 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c: refactor packed entries using structs.

Tue Feb  7 14:52:10 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_update): table can be unpacked in the callback.

	* st.c (st_foreach): should not yield same pair when checking
	  after unpacking.

Mon Feb  6 21:55:13 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/merger.rb: abort if the working directory is dirty.

	* tool/merger.rb: update the working directory after commit.

Mon Feb  6 00:16:27 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_compatible): return ASCII-8BIT even if 2nd string
	  is ascii only string. [ruby-core:42354] [Bug #5968]

Fri Feb  3 07:16:47 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick.rb:  Moved proxy rewriting to WEBrick::HTTPProxy.
	* lib/webrick/httpproxy.rb:  Add examples of creating a proxy server
	  and response rewriting using HTTPProxy.

Fri Feb  3 06:53:22 2012  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_x509store.c:  Add class documentation for
	  OpenSSL::X509::Store

Thu Feb  2 22:28:13 2012  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/net/http/test_https_proxy.rb
	  (HTTPSProxyTest#test_https_proxy_authentication):
	  add workaround to avoid to hang up without openssl.
	  see [ruby-dev:45021][Bug #5786]

	* test/resolv/test_dns.rb (TestResolvDNS#test_query_ipv4_address):
	  ditto.
