@@ -125,10 +125,7 @@ when nil, "-h", "--help"
   help
   exit
 else
-  unless `svn st`.empty?
-    puts 'this working directory is not clean'
-    abort
-  end
+  system 'svn up'
 
   q = $repos + (ARGV[1] || default_merge_branch)
   revs = ARGV[0].split /,\s*/
@@ -204,7 +201,6 @@ else
 
   if system *%w'svn ci -F' + [f.path]
     # tag :interactive # no longer needed.
-    system 'svn up'
     system 'rm -f subversion.commitlog'
   else
     puts 'commit failed; try again.'
