@@ -1,3 +1,7 @@
+Wed Feb  8 09:49:58 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* tool/merger.rb: don't abort, update first.
+
 Wed Feb 08 09:57:33 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>
 
 	* ext/openssl/ossl_asn1.c: Call INT2NUM only once for GeneralString.
